# Interactive-Oral-Exam

./: .gitignore  README.md  pyproject.toml  requirements.txt  test_elevenlabs_full_file.py
Data/: extracted_answers.json
examples/: anchor_example.json  batch_input_example.json  rubric_example.json
scripts/: collect_text_pdfs.py  run_batch.py
src/: main.py
src/audio/: loader.py
src/batch/: processor.py
src/evaluation/: anchor_based.py  base.py  direct_scoring.py  llm_engine.py  llm_evaluator.py  local_llm_evaluator.py  pairwise.py  prompts.py  rubric_based.py  tournament.py
src/models/: evaluation_result.py  student.py
src/orchestration/: batch_pipeline.py  single_turn.py
src/storage/: result_store.py  transcript_store.py
src/stt/: base.py  elevenlabs.py  whisper_local.py
