[project]
name = "interactive-oral-exam"
version = "0.1.0"
description = "Interactive oral exam system with STT and LLM evaluation"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"
